Added ability to login to the server using post api call that returns a WebRequestResult of ApiResponse, which also returns a LoginResultApiModel with the desired token.

--- a/Gabbeto.Word.Web.Server/Gabbetto.Word.Web.Server.csproj
+++ b/Gabbeto.Word.Web.Server/Gabbetto.Word.Web.Server.csproj
@@ -14,4 +14,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Gabbeto.Word.Core\Gabbeto.Word.Core.csproj" />
+  </ItemGroup>
+
 </Project>
