Added usage of a local client data store using SQLite database context. Now the app is aware if the user is already logged in and is able to load the initial settings(or the given ones after login).

--- a/Gabbetto.Word/Gabbetto.Word.csproj
+++ b/Gabbetto.Word/Gabbetto.Word.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Gabbeto.Word.Core\Gabbeto.Word.Core.csproj" />
+    <ProjectReference Include="..\Gabbeto.Word.Relational\Gabbeto.Word.Relational.csproj" />
   </ItemGroup>
 
   <ItemGroup>
