--- a/Gabbeto.Word.Core/Gabbeto.Word.Core.csproj
+++ b/Gabbeto.Word.Core/Gabbeto.Word.Core.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="PropertyChanged.Fody" Version="3.2.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ApiModels\Extensions\" />
+  </ItemGroup>
+
 </Project>
