--- a/Gabbeto.Word.Web.Server/Gabbetto.Word.Web.Server.csproj
+++ b/Gabbeto.Word.Web.Server/Gabbetto.Word.Web.Server.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
+    <PackageReference Include="Sendgrid" Version="9.13.2" />
   </ItemGroup>
 
   <ItemGroup>
