--- a/Gabbeto.Word.Web.Server/Gabbetto.Word.Web.Server.csproj
+++ b/Gabbeto.Word.Web.Server/Gabbetto.Word.Web.Server.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200428121242_FirstMigration.cs" />
+    <Compile Remove="Migrations\20200428121242_FirstMigration.Designer.cs" />
+    <Compile Remove="Migrations\20200428122427_InitialMigration.cs" />
+    <Compile Remove="Migrations\20200428122427_InitialMigration.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Controllers\ApiController.cs~RF1aef2029.TMP" />
   </ItemGroup>
 
