--- a/Gabbetto.Word/Gabbetto.Word.csproj
+++ b/Gabbetto.Word/Gabbetto.Word.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.4" />
     <PackageReference Include="ProjectUniversal.Framework" Version="1.0.4" />
   </ItemGroup>
 
